--- a/resources/stylesheets/styles.css
+++ b/resources/stylesheets/styles.css
@@ -1,1 +1,103 @@
-body{background:#333;font:0.875em/1.5em Helvetica,sans-serif;margin:20px}.container{background:#fff;margin:0 auto;max-width:900px;padding:2.2222222%;-webkit-box-shadow:0px 0px 10px 0px rgba(0,0,0,0.95);-moz-box-shadow:0px 0px 10px 0px rgba(0,0,0,0.95);box-shadow:0px 0px 10px 0px rgba(0,0,0,0.95)}h1{color:#333;margin-bottom:4.4444444%}a{color:#900;text-decoration:none}.tabsNav li a.active,.accordionNav li a.active{background:#333;color:#fff;font-weight:bold}ul{list-style:none;margin:0;overflow:hidden;padding:0}ul li>a{background:#eee;display:block;padding:0.75em}.section{padding:0 1.42857143em 1.42857143em 1.42857143em}.js .top{display:none}.no-js .accordionNav li>a{display:none}@media all and (max-width: 479px){.js .tabsNav{display:none}}@media all and (min-width: 480px){ul.accordionNav{float:right;width:64.583333%}ul.accordionNav li>a{display:none}ul.tabsNav{float:left;width:31.25%}}.container:after{clear:both;content:'.';display:block;height:0;visibility:hidden}
+/* line 3, ../sass/styles.scss */
+body {
+  background: #333;
+  font: 0.875em/1.5em Helvetica, sans-serif;
+  margin: 20px;
+}
+
+/* line 5, ../sass/styles.scss */
+.container {
+  background: #fff;
+  margin: 0 auto;
+  max-width: 900px;
+  padding: 2.2222222%;
+  /* 20px / 900px */
+  -webkit-box-shadow: 0px 0px 10px 0px rgba(0, 0, 0, 0.95);
+  -moz-box-shadow: 0px 0px 10px 0px rgba(0, 0, 0, 0.95);
+  box-shadow: 0px 0px 10px 0px rgba(0, 0, 0, 0.95);
+}
+
+/* line 12, ../sass/styles.scss */
+h1 {
+  color: #333;
+  margin-bottom: 4.4444444%;
+}
+
+/* 40px / 900px */
+/* line 14, ../sass/styles.scss */
+a {
+  color: #990000;
+  text-decoration: none;
+}
+
+/* line 17, ../sass/styles.scss */
+.tabsNav li a.active,
+.accordionNav li a.active {
+  background: #333;
+  color: #fff;
+  font-weight: bold;
+}
+
+/* line 19, ../sass/styles.scss */
+ul {
+  list-style: none;
+  margin: 0;
+  overflow: hidden;
+  padding: 0;
+}
+/* line 27, ../sass/styles.scss */
+ul li > a {
+  background: #eee;
+  display: block;
+  padding: 0.75em;
+}
+
+/* line 33, ../sass/styles.scss */
+.section {
+  padding: 0 1.42857143em 1.42857143em 1.42857143em;
+}
+
+/* 20px / 14px */
+/* line 35, ../sass/styles.scss */
+.js .top {
+  display: none;
+}
+
+/* Hide fallback "Top" links when Javascript is working */
+/* line 37, ../sass/styles.scss */
+.no-js .accordionNav li > a {
+  display: none;
+}
+
+@media all and (max-width: 479px) {
+  /* line 41, ../sass/styles.scss */
+  .js .tabsNav {
+    display: none;
+  }
+}
+@media all and (min-width: 480px) {
+  /* line 55, ../sass/styles.scss */
+  ul.accordionNav {
+    float: right;
+    width: 64.583333%;
+    /* 620px / 960px */
+  }
+  /* line 57, ../sass/styles.scss */
+  ul.accordionNav li > a {
+    display: none;
+  }
+  /* line 61, ../sass/styles.scss */
+  ul.tabsNav {
+    float: left;
+    width: 31.25%;
+    /* 300px / 960px */
+  }
+}
+/* line 67, ../sass/styles.scss */
+.container:after {
+  clear: both;
+  content: '.';
+  display: block;
+  height: 0;
+  visibility: hidden;
+}
